# FivJourney-Tools

./: .bandit  .cursorrules  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.env  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: api-structure.mdc  database-models.mdc  development-workflow.mdc  documentation-standards.mdc  project-rule.mdc  testing-guidelines.mdc
alembic/: env.py
app/: __init__.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: auth.py  expenses.py  itineraries.py  travel_logs.py  travel_plans.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  enums.py  expense.py  itinerary.py  travel_log.py  travel_plan.py  user.py
app/schemas/: expense.py  itinerary.py  travel_log.py  travel_plan.py  user.py
apps/alembic/: env.py
apps/alembic/versions/: 061c51a212f7_remove_is_public_field_from_travel_logs.py  409c10404f2c_migration.py  468a4fd7ee0c_make_travel_plan_id_required_in_travel_logs.py  b617051fe136_create_initial_tables.py
apps/api/v1/: dependencies.py  router.py
apps/api/v1/endpoints/: auth.py  expenses.py  itineraries.py  travel_logs.py  travel_plans.py  users.py
apps/core/: database.py  security.py
apps/models/: expense.py  itinerary.py  travel_log.py  travel_plan.py  user.py
apps/schemas/: __init__.py  expense.py  itinerary.py  travel_log.py  travel_plan.py  user.py
apps/tests/: conftest.py  test_auth.py  test_expenses.py  test_itineraries.py  test_models.py  test_travel_logs.py  test_travel_plans.py  test_users.py
docs/: README.md  api.md  deployment.md  development.md  index.md  lint-guide.md  models.md  quick-start.md  uv-guide.md
tests/: __init__.py  conftest.py  test_auth.py  test_expenses.py  test_itineraries.py  test_models.py  test_travel_logs.py  test_travel_plans.py  test_users.py
